syntax = "proto3";
package api;

// see https://github.com/firebase/firebase-admin-node/blob/master/src/auth/index.ts#L195
message LangameUser {
  string uid = 1;
  string email = 2;
  string display_name = 3;
  bool email_verified = 4;
  string phone_number = 5;
  string photo_url = 6;
}

message Interest {
  string value = 1;
  repeated Interest sub_interests = 2;
}
